Fixed range input shift

--- a/src/components/OrderForm/style.scss
+++ b/src/components/OrderForm/style.scss
@@ -267,6 +267,11 @@
   vertical-align: middle;
   margin: 0 0 16px 0;
 
+  input[type="range"] {
+    width: 100%;
+    padding: 4px 0px;
+  }
+
   &:not(.inline) {
     width: 100%;
   }
